Bundle message box icons in Clippings for Thunderbird redistributable (issue #89)

--- a/src/pages/clippingsMgr.css
+++ b/src/pages/clippingsMgr.css
@@ -984,7 +984,7 @@ ul.fancytree-container {
 }
 
 .lightbox .msgbox-icon[os="mac"] {
-    background-image: url("chrome://global/skin/icons/warning-64.png");
+    background-image: url("../img/warning-64-mac.png");
 }
 
 .lightbox input[type="text"] {
@@ -1238,7 +1238,7 @@ ul.fancytree-container {
 }
 
 #import-dlg #restore-backup-warning > .warning-icon[os="mac"] {
-    background-image: url("chrome://global/skin/icons/warning-64.png");
+    background-image: url("../img/warning-64-mac.png");
 }
 
 #import-dlg #restore-backup-warning > p {
