--- a/src/pages/options.css
+++ b/src/pages/options.css
@@ -353,7 +353,7 @@ body[data-os="win"] #backup-reminder-freq + label {
 }
 
 #sync-clippings-dlg #sync-cxn-error .msgbox-icon[os="mac"] {
-    background-image: url("chrome://global/skin/icons/warning-64.png");
+    background-image: url("../img/warning-64-mac.png");
 }
 
 #sync-clippings-dlg #generic-error .msgbox-icon {
@@ -445,8 +445,12 @@ body[data-locale="uk"] #sync-clippings-dlg #sync-helper-app-update-check + label
     height: 48px;
     margin-top: 8px;
     margin-right: 12px;
-    background-image: url("chrome://global/skin/icons/question-64.png");
+    background-image: url("../img/question-64.png");
     background-size: contain;
+}
+
+body[data-os="mac"] #turn-off-sync-clippings-dlg .msgbox-icon {
+    background-image: url("../img/question-64-mac.png");
 }
 
 #turn-off-sync-clippings-ack-dlg {
